--- a/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
+++ b/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
@@ -35,6 +35,8 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
+    "\n",
     "localCorpus = corpus.corpora.LocalCorpus()\n",
     "localCorpus"
    ]
@@ -117,12 +119,12 @@
      "output_type": "stream",
      "text": [
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: newCorpus metadata cache: starting processing of paths: 0\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/mk/qf43gd_s5f30rzzbt7l7l01h0000gn/T/music21/local-newCorpus.p.gz\n",
-      "bundles.py: WARNING: MetadataBundle Modification Time: 1598914420.295312\n",
+      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/local-newCorpus.p.gz\n",
+      "bundles.py: WARNING: MetadataBundle Modification Time: 1660112359.488214\n",
       "bundles.py: WARNING: Skipped 0 sources already in cache.\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.028 md items: 0\n",
+      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.025 md items: 0\n",
       "\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/mk/qf43gd_s5f30rzzbt7l7l01h0000gn/T/music21/local-newCorpus.p.gz\n"
+      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/local-newCorpus.p.gz\n"
      ]
     },
     {
@@ -288,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.RichMetadata id=0x7ff7e6595e80>"
+       "<music21.metadata.RichMetadata object at 0x109522440>"
       ]
      },
      "execution_count": 10,
@@ -308,20 +310,28 @@
     {
      "data": {
       "text/plain": [
-       "[('ambitus',\n",
-       "  \"AmbitusShort(semitones=34, diatonic='m7', pitchLowest='G2', pitchHighest='F5')\"),\n",
+       "(('ambitus',\n",
+       "  AmbitusShort(semitones=34, diatonic='m7', pitchLowest='G2', pitchHighest='F5')),\n",
        " ('composer', 'J.S. Bach'),\n",
-       " ('keySignatureFirst', '-2'),\n",
-       " ('keySignatures', '[-2]'),\n",
+       " ('fileFormat', 'musicxml'),\n",
+       " ('filePath',\n",
+       "  '/Users/gregc/Documents/Code/music21/music21/corpus/bach/bwv10.7.mxl'),\n",
+       " ('keySignatureFirst', -2),\n",
+       " ('keySignatures', [-2]),\n",
        " ('movementName', 'bwv10.7.mxl'),\n",
-       " ('noteCount', '214'),\n",
-       " ('numberOfParts', '4'),\n",
+       " ('noteCount', 214),\n",
+       " ('numberOfParts', 4),\n",
        " ('pitchHighest', 'F5'),\n",
        " ('pitchLowest', 'G2'),\n",
-       " ('quarterLength', '88.0'),\n",
+       " ('quarterLength', 88.0),\n",
+       " ('software', 'MuseScore 2.1.0'),\n",
+       " ('software', 'music21 v.6.0.0a'),\n",
+       " ('software', 'music21 v.8.0.0a9'),\n",
        " ('sourcePath', 'bach/bwv10.7.mxl'),\n",
+       " ('tempoFirst', None),\n",
+       " ('tempos', []),\n",
        " ('timeSignatureFirst', '4/4'),\n",
-       " ('timeSignatures', \"['4/4']\")]"
+       " ('timeSignatures', ['4/4']))"
       ]
      },
      "execution_count": 11,
@@ -755,7 +765,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -769,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
