--- a/documentation/source/usersGuide/usersGuide_54_extendingConverter.ipynb
+++ b/documentation/source/usersGuide/usersGuide_54_extendingConverter.ipynb
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/1t/0_91h1r94kg21qt1jt20lxkc0000gn/T/music21/tmpvkxam6ik.sb\n"
+      "/var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/tmpowosgwxt.sb\n"
      ]
     }
    ],
@@ -193,6 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{0.0} <music21.metadata.Metadata object at 0x114aeb490>\n",
       "{0.0} <music21.stream.Measure 1 offset=0.0>\n",
       "    {0.0} <music21.clef.TrebleClef>\n",
       "    {0.0} <music21.meter.TimeSignature 4/4>\n",
@@ -240,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.stream.Part 0x119a786a0>"
+       "<music21.stream.Part 0x114855720>"
       ]
      },
      "execution_count": 8,
@@ -309,7 +310,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
