--- a/documentation/source/usersGuide/usersGuide_02_notes.ipynb
+++ b/documentation/source/usersGuide/usersGuide_02_notes.ipynb
@@ -123,7 +123,9 @@
        " 'NoteException',\n",
        " 'Rest',\n",
        " 'SYLLABIC_CHOICES',\n",
+       " 'StepName',\n",
        " 'Unpitched',\n",
+       " 'annotations',\n",
        " 'base',\n",
        " 'beam',\n",
        " 'common',\n",
@@ -134,6 +136,7 @@
        " 'expressions',\n",
        " 'interval',\n",
        " 'noteheadTypeNames',\n",
+       " 'overload',\n",
        " 'pitch',\n",
        " 'prebase',\n",
        " 'stemDirectionNames',\n",
@@ -1490,7 +1493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
