--- a/documentation/source/usersGuide/usersGuide_16_tinyNotation.ipynb
+++ b/documentation/source/usersGuide/usersGuide_16_tinyNotation.ipynb
@@ -44,6 +44,7 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
     "s = converter.parse('tinyNotation: 4/4 C4 D4 E4 F4 G4 A4 B4 c4')\n",
     "s.show()"
    ]
@@ -713,7 +714,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -727,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
