--- a/documentation/source/usersGuide/usersGuide_17_derivations.ipynb
+++ b/documentation/source/usersGuide/usersGuide_17_derivations.ipynb
@@ -76,6 +76,7 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
     "s = corpus.parse('mozart/k80', 1)\n",
     "s.id = 'mozartK80'\n",
     "s.derivation"
@@ -497,7 +498,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
