--- a/documentation/source/usersGuide/usersGuide_18_intervals.ipynb
+++ b/documentation/source/usersGuide/usersGuide_18_intervals.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,12 +57,13 @@
        "<music21.interval.Interval P5>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from music21 import *\n",
     "i = interval.Interval('P5')\n",
     "i"
    ]
@@ -1388,7 +1389,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1402,7 +1403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
