--- a/documentation/source/usersGuide/usersGuide_19_duration2.ipynb
+++ b/documentation/source/usersGuide/usersGuide_19_duration2.ipynb
@@ -28,6 +28,7 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
     "n = note.Note('C#4')\n",
     "n.duration"
    ]
@@ -1743,7 +1744,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1757,7 +1758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
