--- a/documentation/source/usersGuide/usersGuide_26_iterators.ipynb
+++ b/documentation/source/usersGuide/usersGuide_26_iterators.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +249,8 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
+    "\n",
     "s = stream.Part(id='restyStream')\n",
     "s.append(note.Note('C#'))\n",
     "s.append(note.Rest(quarterLength=2.0))\n",
@@ -1070,7 +1072,7 @@
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1084,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
