--- a/documentation/source/usersGuide/usersGuide_32_articulations.ipynb
+++ b/documentation/source/usersGuide/usersGuide_32_articulations.ipynb
@@ -26,6 +26,8 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
+    "\n",
     "art = articulations.Articulation()\n",
     "art"
    ]
@@ -566,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -580,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
