--- a/documentation/source/usersGuide/usersGuide_43_searching1.ipynb
+++ b/documentation/source/usersGuide/usersGuide_43_searching1.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from music21 import *\n",
     "lamb1 = corpus.parse('palestrina/agnus_I_01', forceSource=True)"
    ]
   },
@@ -425,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
