--- a/documentation/source/usersGuide/usersGuide_46_streams3.ipynb
+++ b/documentation/source/usersGuide/usersGuide_46_streams3.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from music21 import *\n",
     "import copy\n",
     "\n",
     "def intervalStream(inputStream):\n",
@@ -180,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
