--- a/documentation/source/usersGuide/usersGuide_58_sitesContext.ipynb
+++ b/documentation/source/usersGuide/usersGuide_58_sitesContext.ipynb
@@ -44,6 +44,8 @@
     }
    ],
    "source": [
+    "from music21 import *\n",
+    "\n",
     "m = stream.Measure(number=1)\n",
     "es = note.Note('E-4')\n",
     "m.insert(2, es)\n",
@@ -977,7 +979,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -991,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
